# ManifoldExtendedKalmanFilter

./: CMakeLists.txt  README.md
cmake/: ManifoldExtendedKalmanFilterConfig.cmake.in
include/: attitude_kalman_9dof.hpp  data_types.hpp  tools.hpp
include/ManifoldExtendedKalmanFilter/: attitude_kalman_9dof.hpp  tools.hpp
include/manifoldextendedkalmanfilter/: attitude_kalman_9dof.hpp  data_types.hpp
src/: attitude_kalman_9dof.cpp  tools.cpp
